# Flower-Detection-using-Keras

./: .gitignore  README.md  data.py  flowerDetection.py  func.py  inference.py  model.py  pyproject.toml  train.py
notebooks/: ResNet_50.ipynb
