[tool.poetry]
name = "kaggle-flowers-classification-keras"
version = "0.1.0"
description = "Simple flower classification"
authors = ["svupper <sofiane.merbah.sorbonne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.2"
matplotlib = "^3.9.0"
scikit-image = "^0.24.0"
pytorch-lightning = "^2.3.1"
torchvision = "^0.18.1"
pyqt5 = "^5.15.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
